--- a/public/components/documentai.html
+++ b/public/components/documentai.html
@@ -263,7 +263,7 @@
       </section>
       <section class="menus-section" id="menusSection">
         <h2 class="h5 mb-3">Using Document AI</h2>
-        <div id="menusList" class="d-flex flex-column gap-3"></div>
+        <div id="menusList"></div>
         <div id="menuDetails" class="hidden">
           <div class="menu-modal-content">
             <button id="closeMenuDetails" class="btn-close position-absolute end-0 top-0 m-3" aria-label="Close"></button>
