--- a/public/components/documentaiocrtexts.html
+++ b/public/components/documentaiocrtexts.html
@@ -19,7 +19,7 @@
       </nav>
       <section id="debugListSection">
         <h2 class="h5 mb-3">Document AI Debug Raw Text Files</h2>
-        <div id="debugList" class="d-flex flex-column gap-3"></div>
+        <div id="debugList"></div>
       </section>
       <div id="debugRawTextModal" class="hidden">
         <div class="menu-modal-content">
