--- a/public/components/hybridai.html
+++ b/public/components/hybridai.html
@@ -32,7 +32,7 @@
       </section>
       <section class="menus-section" id="hybridMenusSection">
         <h2 class="h5 mb-3">Parsed Hybrid Menus</h2>
-        <div id="hybridMenusList" class="d-flex flex-column gap-3"></div>
+        <div id="hybridMenusList"></div>
         <!-- Hybrid Details Modal Overlay -->
         <div id="hybridMenuDetailsOverlay" class="menu-preview-modal" style="display:none;">
           <div class="menu-preview-content">
